--- a/idex.html
+++ b/idex.html
@@ -134,15 +134,16 @@
             <input class="input-field" type="text" name=""placeholder="Suggest me any feedback for me" id="">
             <button class="submit">Submit</button>
         </div>
-
     </section>
 </main>
 <footer class="footer-mama">
        <div class="footer-1">An Open Commitment by Awlad Hossain</div>
-     <div>
+     <div class="footer-2">
         <img src="assets/facebook.png" alt="">
         <img src="assets/github.png" alt="">
         <img src="assets/linkedin-icon 1.png" alt="">
+
+        
      </div>
 </footer>
 </body>
