--- a/index.html
+++ b/index.html
@@ -1,150 +1,227 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Assignment-1-Web-Development</title>
-    <link rel="stylesheet" href="style/style.css">
-</head>
-<body>
-    <header>
-        <nav>
-            <div class="nav-title">
-                <h4 class="title-name">Awlad.H</h4>
-                <button class="button-btr">Download Resume</button>
-            </div>
-        </nav>
-        <div class="banner">
-             <img src="assets/Group.png" alt="">
-             <h1>"In the near future, I hope to become a Developer."</h1>
-             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
-             <button class="button-background">
-                Contact with me
-             </button>
-        </div>
-    </header>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Assignment-1-Web-Development</title>
+        <link rel="stylesheet" href="style/style.css">
+    </head>
+    <body>
+        <header>
+            <nav>
+                <div class="nav-title">
+                    <h4 class="title-name">Majidul kabir</h4>
+                    <button class="button-btr">Download Resume</button>
+                </div>
+            </nav>
+            <div class="banner">
+                <div class="banner-container">
+                    <div class="banner-img">
+                        <img src="assets/Group.png" alt>
 
-<main>
-    <section class="banner-back">
-        <div>
-            <h2>Why Web Development??</h2>
-            <p class="banner-mid">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem<br> Ipsum has been the industry's standard dummy text.</p>
-        </div>
- </section>
-<section class="banner-modify">
-        <section class="banner-head">
-            <div>
-                <h3 class="banner-net">I will Do Coding and<br>Change The World</h3>
-                <p class="banner-mit">Lorem Ipsum is simply dummy text of the<br>printing and typesetting industry.</p>
-                <button class="button-code">Learn More</button>
-            </div>
-            <div>
-            <img src="assets/Layer_1.png" alt="">
-             </div>
-        </section>
-    <section class="banner-netis">
-            <div>
-                <img src="assets/Group 3.png" alt="">
-            </div>
-            <div>
-            <h3 class="banner-heading">I will help People by creating <br> Modern Web System</h3>
-            <p>Lorem Ipsum is simply dummy text of the<br>printing and typesetting industry.</p>
-            <button class="button-code">
-                Learn More
-            </button>
-            </div>
-    </section>
-    <section class="cart">
-        <div>
-            <h3 class="cart-title">I will Do Coding and<br>Change The World</h3>
-            <p class="description">Lorem Ipsum is simply dummy text of the<br>printing and typesetting industry.</p>
-            <button class="button-code"> Learn More</button>
-        </div>
-            <div>
-                <img src="assets/Group 4.png" alt="">
-            </div>
-    </section>
-</section>
-</section>
-    <section class="bi-section">
-        <div>
-            <h1>My Inspiration</h1>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem<br>Ipsum has been the industry's standard dummy text.</p>
-        </div>
-    </section>  
-    <section class="Video-link">
-        <iframe width="1140" height="614" src="https://www.youtube.com/embed/jrTK9Mfb4Bs?si=9x_TDl0_Y6IDwf90" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-    </section>
- <section class="cart-two">
-        <div>
-        <h1 class="title"> My Current Target</h1>
-        <p class="discribtion">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem<br>Ipsum has been the industry's standard dummy text.</p>
-    </div>
- </section>
- <section class="Coding-web">
-        <div class="code-1">
-            <img src="assets/html.png" alt="">
-            <h4 class="title">HTML</h4>
-            <p class="discription">Lorem Ipsum is simply dummy<br>text of the printing.</p>
-            <a href="tag1">Learn More</a>
-        </div>
-         <div class="code-2">
-            <img src="assets/css.png" alt="">
-            <h4 class="title">CSS</h4>
-            <p class="discription">Lorem Ipsum is simply dummy<br>text of the printing.</p>
-            <a href="tag2">Learn More</a>
-        </div>
-        <div class="code-3">
-        <img src="assets/js.png" alt="">
-        <h4 class="title">JavaScript</h4>
-        <p>Lorem Ipsum is simply dummy<br>text of the printing.</p>
-        <a href="tag3">Learn More</a>
-        </div>
- </section>  
-<section class="cart-3">
-    <div class="target">
-        <h1 class="title">My Next Target</h1>
-        <p class="discription">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem<br>Ipsum has been the industry's standard dummy text.</p>
-    </div>
-</section>  
-<section class="apps">
-    <div class="app-1">
-        <img src="assets/react.png" alt="">
-        <h3 class="title-app">React JS</h3>
-        <p class="description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has<br>been the industry's standard dummy text.</p>
-        <a href="tag4">Learn More</a>
-    </div>
-    <div class="app-2">
-        <img src="assets/nodejs.png" alt="">
-        <h3 class="title-app">Node JS</h3>
-        <p class="description">Lorem Ipsum is simply dummy text of the printing and typesetting</p>
-        <a href="tag5">Learn More</a>
-    </div>
-    <div class="app-3">
-        <img src="assets/mongodb.png" alt="">
-        <h3 class="title">MongoDB</h3>
-        <p class="description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
-        <a href="tag6">Learn More</a>
-    </div>
-</section>
-    <section class="support">
-        <div class="freedback">
-            <h1 class="title">I need Support</h1>
-            <p class="description">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-            <input class="input-field" type="text" name=""placeholder="Suggest me any feedback for me" id="">
-            <button class="submit">Submit</button>
-        </div>
-    </section>
-</main>
-<footer class="footer-mama">
-       <div class="footer-1">An Open Commitment by Awlad Hossain</div>
-     <div class="footer-2">
-        <img src="assets/facebook.png" alt="">
-        <img src="assets/github.png" alt="">
-        <img src="assets/linkedin-icon 1.png" alt="">
+                    </div>
 
-        
-     </div>
-</footer>
-</body>
+                    <div class="banner-info">
+                        <div style="text-align: center;">
+                            <h1>"In the near future, I hope to become a Developer."</h1>
+                            <p>I want to pursue web development because it combines my love for technology with my passion for creativity. The field offers endless opportunities to innovate and solve problems, allowing me to continuously learn and grow.</p>
+
+                        </div>
+                        <a href="#contract-info" style="margin-top: 32px;">
+                            <button class="button-background">
+                                Contact with me
+                            </button></a>
+
+                    </div>
+
+                </div>
+
+            </div>
+        </header>
+
+        <main>
+            <section class="banner-back">
+                <div>
+                    <h2>Why Web Development??</h2>
+                    <p class="banner-mid">I am fascinated by how coding can transform ideas into interactive
+                        has been the industry's standard dummy text.</p>
+                </div>
+                <div class="card-container">
+                    <div class="card">
+                        <div class="card-information">
+                            <div style="margin-bottom: 32px;">
+                                <h3 class="banner-heading">I will Do Coding and
+                                    Change The World</h3>
+                                <p>Web development is a dynamic and ever-evolving industry, and I am excited about the prospect of contributing to its future.</p>
+                            </div>
+
+                            <button class="button-code">Learn More</button>
+                        </div>
+                        <div class="card-img">
+                            <img src="assets/Layer_1.png" alt>
+                        </div>
+                    </div>
+                    <div class="card" style="flex-direction: row-reverse;">
+                        <div class="card-information">
+                            <div style="margin-bottom: 32px;">
+                                <h3 class="banner-heading">I will Do Coding and
+                                    Change The World</h3>
+                                <p>I am fascinated by how coding can transform ideas into interactive.</p>
+                            </div>
+
+                            <button class="button-code">Learn More</button>
+                        </div>
+                        <div class="card-img">
+                            <img src="assets/Group 3.png" alt>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="card-information">
+                            <div style="margin-bottom: 32px;">
+                                <h3 class="banner-heading">I will Do Coding and
+                                    Change The World</h3>
+                                <p>I am fascinated by how coding can transform ideas into interactive.</p>
+                            </div>
+
+                            <button class="button-code">Learn More</button>
+                        </div>
+                        <div class="card-img">
+                            <img src="assets/Group 4.png" alt>
+                        </div>
+                    </div>
+                    
+                </div>
+
+            </section>
+
+            <section class="bi-section">
+                <div class="inspire" >
+                    <h1>My Inspiration</h1>
+                    <p>I am focusing on gaining proficiency in HTML, CSS, and JavaScript, as well as familiarizing myself with popular frameworks and libraries. Additionally, I aim to complete several personal projects to build a strong portfolio.</p>
+                </div>
+                <div class="Video-link">
+                    <div class="video">
+
+                       <iframe width="1140" height="615" src="https://www.youtube.com/embed/YwHXniAUMQo?si=Z95LxGtWItOn0ptD" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+                    </div>
+
+                </div>
+            </section>
+
+            <section class="c-target">
+                <div class="cart-two">
+                    <div>
+                        <h1 class="title"> My Current Target</h1>
+                        <p class="discribtion">Lorem Ipsum is simply dummy text
+                            of the printing and typesetting industry.
+                            Lorem<br>Ipsum has been the industry's standard
+                            dummy text.</p>
+                    </div>
+
+                    <div class="t-container">
+                        <div class="Coding-web">
+                            <div class="code-1">
+                                <img src="assets/html.png" alt>
+                                <h4 class="title">HTML</h4>
+                                <p class="discription">HTML is the standard markup language for documents designed to be displayed in a web browser</p>
+                                <a href="https://en.wikipedia.org/wiki/HTML">Learn More</a>
+                            </div>
+                            <div class="code-2">
+                                <img src="assets/css.png" alt>
+                                <h4 class="title">CSS</h4>
+                                <p class="discription">CSS, you can control the color, font, the size of text, the spacing between elements.</p>
+                                <a href="https://www.w3schools.com/css/css_howto.asp">Learn More</a>
+                            </div>
+                            <div class="code-3">
+                                <img src="assets/js.png" alt>
+                                <h4 class="title">JavaScript</h4>
+                                <p>JavaScript is a scripting or programming language that allows you to implement</p>
+                                <a href="https://www.w3schools.com/js/">Learn More</a>
+                            </div>
+
+                        </div>
+                    </div>
+
+                </div>
+            </section>
+
+            <section class="cart-3">
+
+                <div class="target">
+                    <h1 class="title">My Next Target</h1>
+                    <p class="discription">I plan to learn server-side languages like Node.js and Python, and explore databases such as MongoDB and SQL to enhance my ability to create dynamic and data-driven websites.</p>
+                </div>
+
+                <div class="apps">
+                    <div class="all-apps">
+                        <div class="app-1">
+                            <div class="t-img">
+                                <img src="assets/react.png" alt>
+                            </div>
+                            <div class="t-info">
+                                <h3 class="title-app">ReactJS</h3>
+                                <p class="description">React is the library for web and native user interfaces. Build user interfaces out of individual pieces called components written in JavaScript.</p>
+                                <a href="https://react.dev/learn">Learn More</a>
+                            </div>
+                        </div>
+                        <div class="app-1">
+                            <div class="t-img">
+                                <img src="assets/nodejs.png" alt>
+                            </div>
+                            <div class="t-info">
+                                <h3 class="title-app">NodeJS</h3>
+                                <p class="description">As an asynchronous event-driven JavaScript runtime, Node.js is designed to build scalable network applications                      </p>
+                                <a href="https://nodejs.org/en/about">Learn More</a>
+                            </div>
+                        </div>
+                        <div class="app-1">
+                            <div class="t-img">
+                                <img src="assets/mongodb.png" alt>
+                            </div>
+                            <div class="t-info">
+                                <h3 class="title-app">MongoDB</h3>
+                                <p class="description">MongoDB has become one of the most wanted databases in the world because it makes it easy for developers to store, manage, and retrieve data.
+                                </p>
+                                <a href="https://www.mongodb.com/">Learn More</a>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </section>
+
+            <section id="contract-info" class="support">
+                <div class="freedback">
+                    <h1 class="title">I need Support</h1>
+                    <p class="description">If you need anything for help or have any question , Contract me</p>
+                    <div class="m-box">
+                        <input class="input-field" type="text" name
+                            background-color: #ffffff;
+                            placeholder="Suggest me any feedback for me" id>
+                        <button class="submit">Submit</button>
+                    </div>
+
+                </div>
+            </section>
+        </main>
+        <footer class="footer-mama">
+            <div class="footer-1">An Open Commitment by Majidul kabir</div>
+            <div class="footer-2">
+                <a href="facebook.com">
+
+                    <img src="assets/facebook.png" alt>
+                </a>
+                <a href="github.com">
+                    <img src="assets/github.png" alt>
+
+                </a>
+                <a href="linkedin.com">
+                    <img src="assets/linkedin-icon 1.png" alt>
+
+                </a>
+
+            </div>
+        </footer>
+    </body>
 </html>
